# HaskellHangman

./: .gitignore  HaskellHangman.cabal  README.md
assignments/: A6-0.md  A6-1.md  A6-2.md  A7.md  A8.md
solutions/: A6.hs  A7.hs  A8.hs  Main.hs  Provided.hs  Sandbox.hs
